# qvr

./: LICENSE  README.Android  README.md  index.html
configs/: 1-window-fs-mono.qvr  1-window-fs.qvr  1-window-stereo.qvr  1-window-tilted-screen.qvr  1-window-vrpntracker.qvr  1-window.qvr  2-process-ssh.qvr  2-process.qvr  2-window.qvr  3-process-decoupled.qvr  3-process-ssh.qvr  3-process.qvr  4-process.qvr  4-window-outputplugin.qvr  6-window.qvr  demo-osg.qvr  demo-vtk.qvr  extreme.qvr  oculus-as-slaveprocess.qvr  oculus-with-controlwindow.qvr  oculus.qvr  openvr.qvr  osvr-as-slaveprocess.qvr  osvr-with-controlwindow.qvr  osvr.qvr  two-screen-stereo.qvr  vrlab-uni-siegen-sim-mono.qvr  vrlab-uni-siegen-sim-stereo.qvr  vrlab-uni-siegen.qvr  vrscreen-uni-siegen-mono.qvr  vrscreen-uni-siegen-stereo.qvr
html/: annotated.html  app_8hpp.html  class_q_list.html  class_q_v_r_app-members.html  class_q_v_r_app.html  class_q_v_r_config-members.html  class_q_v_r_config.html  class_q_v_r_device-members.html  class_q_v_r_device.html  class_q_v_r_device_config-members.html  class_q_v_r_device_config.html  class_q_v_r_device_event-members.html  class_q_v_r_device_event.html  class_q_v_r_event-members.html  class_q_v_r_event.html  class_q_v_r_event__coll__graph.md5  class_q_v_r_frustum-members.html  class_q_v_r_frustum.html  class_q_v_r_manager-members.html  class_q_v_r_manager.html  class_q_v_r_manager__inherit__graph.dot  class_q_v_r_manager__inherit__graph.md5  class_q_v_r_navigator-members.html  class_q_v_r_navigator.html  class_q_v_r_navigator_config-members.html  class_q_v_r_navigator_config.html  class_q_v_r_observer-members.html  class_q_v_r_observer.html  class_q_v_r_observer_config-members.html  class_q_v_r_observer_config.html  class_q_v_r_process-members.html  class_q_v_r_process.html  class_q_v_r_process__coll__graph.md5  class_q_v_r_process__inherit__graph.dot  class_q_v_r_process_config-members.html  class_q_v_r_process_config.html  class_q_v_r_render_context-members.html  class_q_v_r_render_context.html  class_q_v_r_window-members.html  class_q_v_r_window.html  (+119 more)
libqvr/: CMakeLists.txt  Doxyfile.in  FindOPENVR.cmake  FindOSVR.cmake  FindOSVRCore.cmake  FindOSVRRenderManager.cmake  FindOculus.cmake  FindOpenVR.cmake  FindVRPN.cmake  QVRConfig.cmake.in  README.md  app.hpp  config.cpp  config.hpp  default-config-desktop.qvr  default-config-googlevr.qvr  default-config-oculus.qvr  default-config-openvr.qvr  default-config-osvr-mono.qvr  default-config-osvr-stereo.qvr  default-config-webcamheadtracker.qvr  device.cpp  device.hpp  documentation.hpp  event.cpp  event.hpp  frustum.cpp  frustum.hpp  internalglobals.cpp  internalglobals.hpp  ipc.cpp  ipc.hpp  libqvr.pro  logging.cpp  logging.hpp  manager.cpp  manager.hpp  observer.cpp  observer.hpp  output-fs.glsl  (+11 more)
libqvr/html/: app_8hpp__incl.dot  app_8hpp__incl.md5  app_8hpp_source.html  class_q_v_r_app-members.html  class_q_v_r_config-members.html  class_q_v_r_event__coll__graph.dot  class_q_v_r_frustum.html  class_q_v_r_manager-members.html  class_q_v_r_observer_config-members.html  class_q_v_r_observer_config.html  class_q_v_r_process_config-members.html  class_q_v_r_process_config.html  class_q_v_r_render_context-members.html  class_q_v_r_render_context.html  class_q_v_r_window_config-members.html  classes.html  config_8hpp__incl.dot  config_8hpp__incl.md5  config_8hpp_source.html  documentation_8hpp.html  event_8hpp__incl.dot  frustum_8hpp.html  functions_func.html  functions_rela.html  globals_enum.html  globals_func.html  graph_legend.html  inherit_graph_0.dot  inherit_graph_10.dot  inherit_graph_11.md5  inherit_graph_12.dot  inherit_graph_12.md5  inherit_graph_15.dot  inherit_graph_16.md5  inherit_graph_17.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_5.dot  inherit_graph_9.dot  logging_8hpp__incl.md5  (+10 more)
libqvr/html/search/: all_0.js  all_14.js  all_7.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  enumvalues_0.js  files_0.js  files_4.js  files_6.js  files_7.js  functions_10.js  functions_11.js  functions_12.js  functions_14.js  functions_2.js  functions_3.js  functions_e.js  functions_f.js  searchdata.js  variables_5.js
qvr-example-opengl/: .gitignore  CMakeLists.txt  fragment-shader.glsl  geometries.cpp  geometries.hpp  qvr-example-opengl.cpp  qvr-example-opengl.hpp  qvr-example-opengl.pro  vertex-shader.glsl
qvr-example-opengl-minimal/: CMakeLists.txt  fragment-shader.glsl  qvr-example-opengl-minimal.cpp  qvr-example-opengl-minimal.hpp  resources.qrc
qvr-example-openscenegraph/: CMakeLists.txt  qvr-example-openscenegraph.cpp  qvr-example-openscenegraph.hpp
qvr-example-outputplugin/: CMakeLists.txt  README.md  fragment-shader.glsl  qvr-example-outputplugin.cpp  qvr-example-outputplugin.hpp  qvr-example-outputplugin.qrc
qvr-example-vtk/: CMakeLists.txt  qvr-example-vtk.cpp  qvr-example-vtk.hpp
qvr-helloworld/: CMakeLists.txt  FindQVR.cmake  fragment-shader.glsl  geometries.cpp  geometries.hpp  qvr-helloworld.cpp  qvr-helloworld.hpp  resources.qrc  vertex-shader.glsl
qvr-identify-displays/: CMakeLists.txt  fragment-shader.glsl  qvr-identify-displays.cpp  qvr-identify-displays.hpp  vertex-shader.glsl
qvr-minimal-example/: CMakeLists.txt  qvr-minimal-example.cpp  qvr-minimal-example.hpp  vertex-shader.glsl
qvr-osgviewer/: CMakeLists.txt  qvr-osgviewer.cpp  (+1 more)
qvr-outputplugin-example/: CMakeLists.txt  README.md  fragment-shader.glsl  qvr-outputplugin-example.cpp  qvr-outputplugin-example.hpp  qvr-outputplugin-example.qrc
qvr-sceneviewer/: CMakeLists.txt  README.md  fragment-shader.glsl  qvr-sceneviewer.cpp  qvr-sceneviewer.hpp  sceneviewer.cpp  sceneviewer.hpp  vertex-shader.glsl
qvr-videoplayer/: CMakeLists.txt  README.md  colorconv-fs.glsl  colorconv-vs.glsl  fragment-shader.glsl  qvr-videoplayer.cpp  qvr-videoplayer.hpp  resources.qrc  screen.cpp  screen.hpp  vertex-shader.glsl
qvr-vncviewer/: CMakeLists.txt  README.md  fragment-shader.glsl  qvr-vncviewer.cpp  qvr-vncviewer.hpp  vertex-shader.glsl
qvr-vtk-example/: CMakeLists.txt  qvr-vtk-example.cpp  qvr-vtk-example.hpp
(+70 files in other folders)
